# weather-multi-app

./: .gitignore  Dockerfile  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/weather_app/: __init__.py  __main__.py
src/weather_app/application/: dtos.py  services.py
src/weather_app/domain/: __init__.py  exceptions.py  models.py  services.py
src/weather_app/infrastructure/: location_service.py  weather_api.py
src/weather_app/interfaces/: __init__.py  cli.py  mcp_server.py  web.py
src/weather_app/interfaces/templates/: base.html  error.html  index.html  weather.html
tests/: conftest.py  test_application_services.py  test_domain_models.py  test_domain_services.py
